--- a/execution/nextflow.config
+++ b/execution/nextflow.config
@@ -1,3 +1,5 @@
+// Shortened nextflow config file to run tests for further development
+
 report {
     enabled = true
     file = '/data/output/report.html'
@@ -54,7 +56,7 @@ trace {
 }
 
 profiles {
-    CPU {
+    fifo_random {
         params {
             max_memory = 50.GB
             max_cpus = 6
@@ -63,66 +65,8 @@ profiles {
     fifo_random {
         k8s.scheduler.strategy = "fifo-random"
     }
-    fifo_roundrobin {
-        k8s.scheduler.strategy = "fifo-roundrobin"
-    }
-    fifo_fair {
-        k8s.scheduler.strategy = "fifo-fair"
-    }
-    rank_random {
-        k8s.scheduler.strategy = "rank-random"
-    }
-    rank_roundrobin {
-        k8s.scheduler.strategy = "rank-roundrobin"
-    }
-    rank_fair {
-        k8s.scheduler.strategy = "rank-fair"
-    }
-    rank_min_random {
-        k8s.scheduler.strategy = "rank_min-random"
-    }
-    rank_min_roundrobin {
-        k8s.scheduler.strategy = "rank_min-roundrobin"
-    }
-    rank_min_fair {
-        k8s.scheduler.strategy = "rank_min-fair"
-    }
-    rank_max_random {
-        k8s.scheduler.strategy = "rank_max-random"
-    }
-    rank_max_roundrobin {
-        k8s.scheduler.strategy = "rank_max-roundrobin"
-    }
-    rank_max_fair {
-        k8s.scheduler.strategy = "rank_max-fair"
-    }
-    random_random {
-        k8s.scheduler.strategy = "random-random"
-    }
-    random_roundrobin {
-        k8s.scheduler.strategy = "random-roundrobin"
-    }
-    random_fair {
-        k8s.scheduler.strategy = "random-fair"
-    }
-    max_random {
-        k8s.scheduler.strategy = "max-random"
-    }
-    max_roundrobin {
-        k8s.scheduler.strategy = "max-roundrobin"
-    }
-    max_fair {
-        k8s.scheduler.strategy = "max-fair"
-    }
-    min_random {
-        k8s.scheduler.strategy = "min-random"
-    }
-    min_roundrobin {
-        k8s.scheduler.strategy = "min-roundrobin"
-    }
-    min_fair {
-        k8s.scheduler.strategy = "min-fair"
-    }
-}
+
 
 includeConfig "versions.config"
+
+}
